--- a/paginas/proximos-estrenos.html
+++ b/paginas/proximos-estrenos.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="../css/estilos.css" rel="stylesheet">
     <link rel="shortcut icon" href="../imagenes/pelicula (1).png" type="image/x-icon">
     <title>CineMatrix</title>
@@ -137,7 +138,7 @@
         <!--EL JOVEN MANOS DE TIJERAS-->
         <section class="contenedorTotal">
             <div class="img-1">
-                <img class="imagen__1" src="../imagenes/tijera-sinopsis.webp" alt="titanic sinopsis">
+                <img class="imagen__1" data-aos="flip-left" src="../imagenes/tijera-sinopsis.webp" alt="titanic sinopsis">
             </div>
 
             <div class="caracteristicas">    
@@ -165,7 +166,7 @@
                 <input class="boton" type="submit" value="Comprar">    
             </div>
 
-                <div class="video">
+                <div class="video" data-aos="fade-left">
                     <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/nfJPYIfT2-U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
         </section>
@@ -173,7 +174,7 @@
         <!--LA BELLA Y LA BESTIA-->
         <section class="contenedorTotal">
             <div class="img-1">
-                <img class="imagen__2" src="../imagenes/bella-y-bestia.webp" alt="la bella y la bestia" alt="seven sinopsis">
+                <img class="imagen__2" data-aos="flip-left" src="../imagenes/bella-y-bestia.webp" alt="la bella y la bestia" alt="seven sinopsis">
             </div>
 
             <div class="caracteristicas">    
@@ -200,7 +201,7 @@
                 <input class="boton" type="submit" value="Comprar">    
             </div>
                         
-            <div class="video">
+            <div class="video" data-aos="fade-left">
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/25iuB-O7kkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
@@ -208,7 +209,7 @@
         <!--FOREST GUMP-->
         <section class="contenedorTotal">
             <div class="img-1">
-                <img class="imagen__3" src="../imagenes/forest-gump.webp" alt="forest gump">
+                <img class="imagen__3" data-aos="flip-left" src="../imagenes/forest-gump.webp" alt="forest gump">
             </div>
             <div class="caracteristicas">    
                 <ul>
@@ -233,7 +234,7 @@
                 <p>Sentado en un banco en Savannah, Georgia, Forrest Gump espera al autobús. Mientras éste tarda en llegar, el joven cuenta su vida a las personas que se sientan a esperar con él. Aunque sufre un pequeño retraso mental, esto no le impide hacer cosas maravillosas. Sin entender del todo lo que sucede a su alrededor, Forrest toma partido en los eventos más importantes de la historia de los Estados Unidos.</p>
                 <input class="boton" type="submit" value="Comprar">    
             </div>
-            <div class="video">
+            <div class="video" data-aos="fade-left">
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/Cyh1LpxnaxI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
@@ -241,7 +242,7 @@
         <!-- EL REY LEON-->
         <section class="contenedorTotal">
             <div class="img-1">
-                <img class="imagen__4" src="../imagenes/el-rey-leon.webp" alt="el rey leon">
+                <img class="imagen__4" data-aos="flip-left" src="../imagenes/el-rey-leon.webp" alt="el rey leon">
             </div>
             <div class="caracteristicas">    
                 <ul>
@@ -264,7 +265,7 @@
                 <p>Tras la muerte de su padre, Simba deberá enfrentarse a su tío para recuperar el trono de Rey de la Selva. Timón y Pumba le acompañarán en su misión.</p>
                 <input class="boton" type="submit" value="Comprar">    
             </div>
-            <div class="video">
+            <div class="video" data-aos="fade-left">
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/bjJvvrKl83M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
@@ -272,7 +273,7 @@
         <!--ANTES DEL AMANECER-->
         <section class="contenedorTotal">
             <div class="img-1">
-                <img class="imagen__5"src="../imagenes/Copia de antes-del-amanecer.jpeg" alt="antes del amanecer">
+                <img class="imagen__5" data-aos="flip-left" src="../imagenes/Copia de antes-del-amanecer.jpeg" alt="antes del amanecer">
             </div>
             <div class="caracteristicas">    
                 <ul>
@@ -297,7 +298,7 @@
                 <p>Un joven periodista norteamericano, que acaba de romper con su novia, y una estudiante francesa se conocen casualmente en el tren Budapest-París. Entablan conversación y deciden recorrer Viena juntos durante una noche que cambiará sus vidas.</p>
                 <input class="boton" type="submit" value="Comprar">    
             </div>
-            <div class="video">
+            <div class="video" data-aos="fade-left">
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/yarH41l4RgQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
@@ -305,7 +306,7 @@
         <!--NI IDEA-->
         <section class="contenedorTotal">
             <div class="img-1">
-                <img class="imagen__6" src="../imagenes/Copia de clueless.jpeg" alt="clueless">
+                <img class="imagen__6" data-aos="flip-left" src="../imagenes/Copia de clueless.jpeg" alt="clueless">
             </div>
             <div class="caracteristicas">    
                 <ul>
@@ -330,7 +331,7 @@
                 <p>Cher y Dionne son dos de las chicas más populares de un instituto de Beverly Hills. Su máxima preocupación es llevar la ropa más atractiva y ser tan populares como sea posible. Pero a pesar de su apariencia, Cher tiene un gran corazón.</p>
                 <input class="boton" type="submit" value="Comprar">    
             </div>
-            <div class="video">
+            <div class="video" data-aos="fade-left">
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/Mgjwq1ZzdPQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
@@ -338,7 +339,7 @@
         <!--SCREAM-->
         <section class="contenedorTotal">
             <div class="img-1">
-                <img class="imagen__7" src="../imagenes/Copia de scream.jpeg" alt="scream">
+                <img class="imagen__7" data-aos="flip-left" src="../imagenes/Copia de scream.jpeg" alt="scream">
             </div>
             <div class="caracteristicas">    
                 <ul>
@@ -364,7 +365,7 @@
                 </p>
                 <input class="boton" type="submit" value="Comprar">    
             </div>
-            <div class="video">
+            <div class="video" data-aos="fade-left">
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/AWm_mkbdpCA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>   
             </div>
         </section>
@@ -372,7 +373,7 @@
         <!--EL SHOW DE TRUMAN-->
         <section class="contenedorTotal">
             <div class="img-1">
-                <img class="imagen__8" src="../imagenes/the-truman-show.jpeg" alt="el show de truman">
+                <img class="imagen__8" data-aos="flip-left" src="../imagenes/the-truman-show.jpeg" alt="el show de truman">
             </div>
             <div class="caracteristicas">    
                 <ul>
@@ -398,7 +399,7 @@
                 </p>
                 <input class="boton" type="submit" value="Comprar">    
             </div>
-            <div class="video">
+            <div class="video" data-aos="fade-left">
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/dlnmQbPGuls" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div> 
         </section>
@@ -406,7 +407,7 @@
         <!--SEXTO SENTIDO-->
         <section class="contenedorTotal">
             <div class="img-1">
-                <img class="imagen__9" src="../imagenes/sexto.jpeg" alt="sexto sentido">
+                <img class="imagen__9" data-aos="flip-left" src="../imagenes/sexto.jpeg" alt="sexto sentido">
             </div>
             <div class="caracteristicas">    
                 <ul>
@@ -432,7 +433,7 @@
                 </p>
                 <input class="boton" type="submit" value="Comprar">    
             </div>
-            <div class="video">
+            <div class="video" data-aos="fade-left">
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/3-ZP95NF_Wk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
@@ -461,5 +462,9 @@
         </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    </body>
-    </html>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+</body>
+</html>
