--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="./css/estilos.css" rel="stylesheet">
     <link rel="shortcut icon" href="imagenes/pelicula (1).png" type="image/x-icon">
     <title>CineMatrix</title>
@@ -136,7 +137,7 @@
         <!--TITANIC-->
         <section class="contenedorTotal">
                 <div class="img-1">
-                    <img class="imagen__1" src="imagenes/titanicsinopsis.jpeg" alt="titanic sinopsis">
+                    <img class="imagen__1" data-aos="flip-left" src="imagenes/titanicsinopsis.jpeg" alt="titanic sinopsis">
                 </div>
 
                 <div class="caracteristicas">    
@@ -164,7 +165,7 @@
                         <input class="boton" type="submit" value="Comprar">    
                     </div>
 
-                <div class="video">
+                <div class="video" data-aos="fade-left">
                     <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/CHekzSiZjrY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
         </section>
@@ -173,7 +174,7 @@
         <!--SE7EN-->
         <section class="contenedorTotal">
             <div class="img-1">
-                <img class="imagen__2"src="imagenes/Seven_Se7en-734875211-large.jpeg" alt="seven sinopsis">
+                <img class="imagen__2" data-aos="flip-left" src="imagenes/Seven_Se7en-734875211-large.jpeg" alt="seven sinopsis">
             </div>
 
             <div class="caracteristicas">    
@@ -202,7 +203,7 @@
                 <input class="boton" type="submit" value="Comprar">    
             </div>
                         
-            <div class="video">
+            <div class="video" data-aos="fade-left">
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/xhzBmjdehPA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
@@ -210,7 +211,7 @@
         <!--MUJER BONITA-->
         <section class="contenedorTotal">
             <div class="img-1">
-                <img class="imagen__3" src="imagenes/pretty woman sinopsis.jpeg" alt="pretty woman sinopsis">
+                <img class="imagen__3" data-aos="flip-left" src="imagenes/pretty woman sinopsis.jpeg" alt="pretty woman sinopsis">
             </div>
             <div class="caracteristicas">    
                 <ul>
@@ -237,7 +238,7 @@
                 <input class="boton" type="submit" value="Comprar">    
             </div>
 
-            <div class="video">
+            <div class="video" data-aos="fade-left">
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/DvPEFrTBu_0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>                </div>
         </section>
 
@@ -245,7 +246,7 @@
         <!--MATRIX-->
         <section class="contenedorTotal">
             <div class="img-1">
-                <img class="imagen__4" src="imagenes/Matrix-155050517-large.jpeg" alt="matrix sinopsis">
+                <img class="imagen__4" data-aos="flip-left" src="imagenes/Matrix-155050517-large.jpeg" alt="matrix sinopsis">
             </div>
             <div class="caracteristicas">    
                 <ul>
@@ -270,7 +271,7 @@
                 <p>El programador informático Thomas Anderson, más conocido en el mundo de los "hacker" como Neo, está en el punto de mira del temible agente Smith. Otros dos piratas informáticos, Trinity y Morfeo, se ponen en contacto con Neo para ayudarlo a escapar. Matrix te posee. Sigue al conejo blanco.</p>
                 <input class="boton" type="submit" value="Comprar">    
             </div>
-            <div class="video">
+            <div class="video" data-aos="fade-left">
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/m8e-FF8MsqU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
@@ -278,7 +279,7 @@
         <!--LA MOMIA-->
         <section class="contenedorTotal">
             <div class="img-1">
-                <img class="imagen__5"src="imagenes/la momia sinopsis.jpeg" alt="la momia sinopsis">
+                <img class="imagen__5" data-aos="flip-left" src="imagenes/la momia sinopsis.jpeg" alt="la momia sinopsis">
             </div>
             <div class="caracteristicas">    
                 <ul>
@@ -303,7 +304,7 @@
                 <p>Rick O'Connell y un compañero descubren las ruinas de Hamunaptra. Después vuelven al mismo lugar con una egiptóloga y su hermano. Allí coinciden con un grupo de americanos que provocan la resurrección de la momia de un diabólico sacerdote egipcio.</p>
                 <input class="boton" type="submit" value="Comprar">    
             </div>
-            <div class="video">
+            <div class="video" data-aos="fade-left">
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/CT6yWV9e4Ig" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
@@ -311,7 +312,7 @@
         <!--MI POBRE ANGELITO-->
         <section class="contenedorTotal">
             <div class="img-1">
-                <img class="imagen__6" src="imagenes/mi pobre angelito sinopsis.jpeg" alt="mi pobre angelito sinopsis">
+                <img class="imagen__6" data-aos="flip-left" src="imagenes/mi pobre angelito sinopsis.jpeg" alt="mi pobre angelito sinopsis">
             </div>
             <div class="caracteristicas">    
                 <ul>
@@ -337,7 +338,7 @@
                 </p>
                 <input class="boton" type="submit" value="Comprar">    
             </div>
-            <div class="video">
+            <div class="video" data-aos="fade-left">
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/I-zoVUYHPMM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
@@ -345,7 +346,7 @@
         <!--EL GUARDAESPALDAS-->
         <section class="contenedorTotal">
             <div class="img-1">
-                <img class="imagen__7" src="imagenes/el-guardaespaldas .jpeg" alt="el guardaespaldas sinopsis">
+                <img class="imagen__7" data-aos="flip-left" src="imagenes/el-guardaespaldas .jpeg" alt="el guardaespaldas sinopsis">
             </div>
             <div class="caracteristicas">    
                 <ul>
@@ -371,7 +372,7 @@
                 </p>
                 <input class="boton" type="submit" value="Comprar">    
             </div>
-            <div class="video">
+            <div class="video" data-aos="fade-left">
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/4JFRdJTszRM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
@@ -379,7 +380,7 @@
         <!--BICHOS-->
         <section class="contenedorTotal">
             <div class="img-1">
-                <img class="imagen__8" src="imagenes/bichos.jpeg" alt="bichos sinopsis">
+                <img class="imagen__8" data-aos="flip-left" src="imagenes/bichos.jpeg" alt="bichos sinopsis">
             </div>
             <div class="caracteristicas">    
                 <ul>
@@ -405,7 +406,7 @@
                 </p>
                 <input class="boton" type="submit" value="Comprar">    
             </div>
-            <div class="video">
+            <div class="video" data-aos="fade-left">
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/38wy8FR_8aM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div> 
         </section>
@@ -413,7 +414,7 @@
         <!--BELLEZA AMERICANA-->
         <section class="contenedorTotal">
             <div class="img-1">
-                <img class="imagen__9" src="imagenes/belleza-americana.jpeg" alt="belleza americana sinopsis">
+                <img class="imagen__9" data-aos="flip-left" src="imagenes/belleza-americana.jpeg" alt="belleza americana sinopsis">
             </div>
             <div class="caracteristicas">    
                 <ul>
@@ -440,7 +441,7 @@
                 <input class="boton" type="submit" value="Comprar">    
             </div>
 
-            <div class="video">
+            <div class="video" data-aos="fade-left">
                 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/GqXz2NeSpY8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
@@ -469,5 +470,9 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
