--- a/paginas/combos.html
+++ b/paginas/combos.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="../css/estilos.css" rel="stylesheet">
     <link rel="shortcut icon" href="../imagenes/pelicula (1).png" type="image/x-icon">
     <title>CineMatrix</title>
@@ -136,23 +137,23 @@
         <!--COMBOS-->
         <section class="combos">
             <div class="combos__1">
-                <img src="../imagenes/balde-de-popcorn.jpeg" alt="combo">
-                <p class="horarios__p">Combo Jack: Pochoclos + gaseosa= $2000</p>
+                <img src="../imagenes/balde-de-popcorn.jpeg" data-aos="zoom-in" class="combos-imagen"  alt="combo">
+                <p class="combos__p">Combo Jack: Pochoclos + gaseosa= $2000</p>
             </div>
 
             <div class="combos__2">
-                <img src="../imagenes/balde-de-popcorn.jpeg" alt="combo">
-                <p class="horarios__p">Combo Jack: Pochoclos + gaseosa= $2000</p>
+                <img src="../imagenes/balde-de-popcorn.jpeg" data-aos="zoom-in" class="combos-imagen" alt="combo">
+                <p class="combos__p">Combo Jack: Pochoclos + gaseosa= $2000</p>
             </div>
 
             <div class="combos__3">
-                <img src="../imagenes/balde-de-popcorn.jpeg" alt="combo">
-                <p class="horarios__p">Combo Jack: Pochoclos + gaseosa= $2000</p>
+                <img src="../imagenes/balde-de-popcorn.jpeg" data-aos="zoom-in" class="combos-imagen" alt="combo">
+                <p class="combos__p">Combo Jack: Pochoclos + gaseosa= $2000</p>
             </div>
 
             <div class="combos__4">
-                <img src="../imagenes/balde-de-popcorn.jpeg" alt="combo">
-                <p class="horarios__p">Combo Jack: Pochoclos + gaseosa= $2000</p>
+                <img src="../imagenes/balde-de-popcorn.jpeg" data-aos="zoom-in" class="combos-imagen" alt="combo">
+                <p class="combos__p">Combo Jack: Pochoclos + gaseosa= $2000</p>
             </div>
         </section>
     </main>
@@ -180,5 +181,9 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
