--- a/paginas/horarios.html
+++ b/paginas/horarios.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="../css/estilos.css" rel="stylesheet">
     <link rel="shortcut icon" href="../imagenes/pelicula (1).png" type="image/x-icon">
     <title>CineMatrix</title>
@@ -137,47 +138,47 @@
       <!--HORARIOS-->
       <section class="horarios">
           <div class="horarios__1">
-            <img class="horarios__1_img" src="../imagenes/titanicsinopsis.jpeg" alt="titanic">
+            <img class="horarios__1_img" data-aos="fade-right" src="../imagenes/titanicsinopsis.jpeg" alt="titanic">
             <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p> 
           </div>
 
           <div class="horarios__2">
-            <img class="horarios__2_img" src="../imagenes/Seven_Se7en-734875211-large.jpeg" alt="seven">
+            <img class="horarios__2_img" data-aos="fade-down" src="../imagenes/Seven_Se7en-734875211-large.jpeg" alt="seven">
             <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span> <span class="funciones">21:30</span></p>
           </div>
 
           <div class="horarios__3">
-            <img class="horarios__3_img" src="../imagenes/pretty woman sinopsis.jpeg" alt="pretty-woman">
+            <img class="horarios__3_img" data-aos="fade-left" src="../imagenes/pretty woman sinopsis.jpeg" alt="pretty-woman">
             <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
           </div>
 
           <div class="horarios__4">
-            <img class="horarios__4_img" src="../imagenes/Matrix-155050517-large.jpeg" alt="matrix">
+            <img class="horarios__4_img" data-aos="fade-right" src="../imagenes/Matrix-155050517-large.jpeg" alt="matrix">
             <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
           </div>
 
           <div class="horarios__5">
-            <img class="horarios__5_img" src="../imagenes/la momia sinopsis.jpeg" alt="la-momia">
+            <img class="horarios__5_img" data-aos="fade-down" src="../imagenes/la momia sinopsis.jpeg" alt="la-momia">
             <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
           </div>
 
           <div class="horarios__6">
-            <img class="horarios__6_img" src="../imagenes/mi pobre angelito sinopsis.jpeg" alt="home-alone">
+            <img class="horarios__6_img" data-aos="fade-left" src="../imagenes/mi pobre angelito sinopsis.jpeg" alt="home-alone">
             <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
           </div>
 
           <div class="horarios__7">
-            <img class="horarios__7_img" src="../imagenes/el-guardaespaldas .jpeg" alt="el-guardaespaldas">
+            <img class="horarios__7_img" data-aos="fade-right" src="../imagenes/el-guardaespaldas .jpeg" alt="el-guardaespaldas">
             <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
           </div>
 
           <div class="horarios__8">
-            <img class="horarios__8_img" src="../imagenes/bichos.jpeg" alt="bichos">
+            <img class="horarios__8_img" data-aos="fade-down" src="../imagenes/bichos.jpeg" alt="bichos">
             <p class="horarios__p">Martes 17 de mayo <span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
           </div>
 
           <div class="horarios__9">
-            <img class="horarios__9_img" src="../imagenes/belleza-americana.jpeg" alt="belleza-americana">
+            <img class="horarios__9_img" data-aos="fade-left" src="../imagenes/belleza-americana.jpeg" alt="belleza-americana">
             <p class="horarios__p">Martes 17 de mayo<span class="funciones">15:30</span><span class="funciones">18:30</span><span class="funciones">21:30</span></p>
           </div>
       </section>
@@ -206,5 +207,9 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-</body>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+  </body>
 </html>
