agregue mixin, extend y seo

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link href="./css/estilos.css" rel="stylesheet">
     <link rel="shortcut icon" href="imagenes/pelicula (1).png" type="image/x-icon">
     <title>CineMatrix</title>
+    <meta name="description" content="Cinematrix te espera para que puedas ver todo lo nueva en peliculas a traves de nuestra cartelera.">
+    <meta name="keywords" content="peliculas, cartelera, cine, entretenimiento, proyeccion, audiovisual, actores, actrices, directores">
 </head>
 <body>
     <header>
@@ -130,8 +132,8 @@
         </div>
 
 
-        <div class="cartelera">
-            <p class="bloque__cartelera">PELICULAS EN CARTEL</p>
+        <div class="bloque-cartelera">
+            <h1 class="bloque__cartelera">PELICULAS EN CARTEL</h1>
         </div> 
 
         <!--TITANIC-->
@@ -160,7 +162,7 @@
                 </div>
 
                 <div class="sinopsis">   
-                        <p><span class="titulo__pelicula">TITANIC</span></p>
+                        <h2><span class="titulo__pelicula">TITANIC</span></h2>
                         <p>Jack es un joven artista que gana un pasaje para viajar a América en el Titanic, el transatlántico más grande y seguro jamás construido. A bordo del buque conoce a Rose, una chica de clase alta que viaja con su madre y su prometido Cal, un millonario engreído a quien solo interesa el prestigio de la familia de su prometida. Jack y Rose se enamoran a pesar de las trabas que ponen la madre de ella y Cal en su relación. Mientras, el lujoso transatlántico se acerca a un inmenso iceberg. </p>
                         <input class="boton" type="submit" value="Comprar">    
                     </div>
@@ -197,7 +199,7 @@
             </div>
 
             <div class="sinopsis">   
-                <p><span class="titulo__pelicula">SE7EN</span></p>
+                <h2><span class="titulo__pelicula">SE7EN</span></h2>
                 <p>El veterano teniente Somerset está a punto de jubilarse y ser reemplazado por el impulsivo detective David Mills. Ambos tendrán que colaborar en la resolución de unos asesinatos cometidos por un psicópata que se basa en los siete pecados capitales.
                 </p>
                 <input class="boton" type="submit" value="Comprar">    
@@ -233,7 +235,7 @@
             </div>
 
             <div class="sinopsis">   
-                <p><span class="titulo__pelicula">MUJER BONITA</span></p>
+                <h2><span class="titulo__pelicula">MUJER BONITA</span></h2>
                 <p>Durante un viaje de negocios a Los Ángeles, Edward, un ejecutivo que compra y vende empresas, encuentra a la prostituta Vivian. Después de pasar una primera noche con ella, Edward le ofrece dinero para que pase toda la semana con él y le acompañe a diversos actos sociales. A medida que van pasando los días, los dos descubren que tienen que superar diversos obstáculos para poder unir sus mundos tan distintos.</p>
                 <input class="boton" type="submit" value="Comprar">    
             </div>
@@ -267,7 +269,7 @@
                 </ul>
             </div>
             <div class="sinopsis">   
-                <p><span class="titulo__pelicula">MATRIX</span></p>
+                <h2><span class="titulo__pelicula">MATRIX</span></h2>
                 <p>El programador informático Thomas Anderson, más conocido en el mundo de los "hacker" como Neo, está en el punto de mira del temible agente Smith. Otros dos piratas informáticos, Trinity y Morfeo, se ponen en contacto con Neo para ayudarlo a escapar. Matrix te posee. Sigue al conejo blanco.</p>
                 <input class="boton" type="submit" value="Comprar">    
             </div>
@@ -300,7 +302,7 @@
                 </ul>
             </div>
             <div class="sinopsis">   
-                <p><span class="titulo__pelicula">LA MOMIA</span></p>
+                <h2><span class="titulo__pelicula">LA MOMIA</span></h2>
                 <p>Rick O'Connell y un compañero descubren las ruinas de Hamunaptra. Después vuelven al mismo lugar con una egiptóloga y su hermano. Allí coinciden con un grupo de americanos que provocan la resurrección de la momia de un diabólico sacerdote egipcio.</p>
                 <input class="boton" type="submit" value="Comprar">    
             </div>
@@ -333,7 +335,7 @@
                 </ul>
             </div>
             <div class="sinopsis">   
-                <p><span class="titulo__pelicula">MI POBRE ANGELITO</span></p>
+                <h2><span class="titulo__pelicula">MI POBRE ANGELITO</span></h2>
                 <p>El joven Kevin McCallister se porta mal la noche antes de ir de viaje a París, por lo que su madre le obliga a dormir en el ático. Al día siguiente y con todas las prisas, la familia va al aeropuerto y se olvida de Kevin. Entonces el niño se despierta solo en casa y cree que ha hecho realidad su sueño de vivir sin familia. Sin embargo, el entusiasmo de Kevin se desvanece cuando descubre que dos delincuentes planean robar la casa de los McCallister y él deberá protegerla.
                 </p>
                 <input class="boton" type="submit" value="Comprar">    
@@ -367,7 +369,7 @@
                 </ul>
             </div>
             <div class="sinopsis">   
-                <p><span class="titulo__pelicula">EL GUARDAESPALDAS</span></p>
+                <h2><span class="titulo__pelicula">EL GUARDAESPALDAS</span></h2>
                 <p>Un agente del servicio secreto, ahora guardaespaldas, encuentra el peligro y el amor cuando protege a una cantante.
                 </p>
                 <input class="boton" type="submit" value="Comprar">    
@@ -401,7 +403,7 @@
                 </ul>
             </div>
             <div class="sinopsis">   
-                <p><span class="titulo__pelicula">BICHOS</span></p>
+                <h2><span class="titulo__pelicula">BICHOS</span></h2>
                 <p>Una hormiga realiza una misión peligrosa para proteger a su colonia de un ejército de saltamontes terroristas.
                 </p>
                 <input class="boton" type="submit" value="Comprar">    
@@ -435,7 +437,7 @@
                 </ul>
             </div>
             <div class="sinopsis">   
-                <p><span class="titulo__pelicula">BELLEZA AMERICANA</span></p>
+                <h2><span class="titulo__pelicula">BELLEZA AMERICANA</span></h2>
                 <p>Lester Burnham es un cuarentón en crisis, cansado de su trabajo y de su mujer, que despierta de su letargo cuando conoce a la atractiva amiga de su hija, a la que intentará impresionar a toda costa.
                 </p>
                 <input class="boton" type="submit" value="Comprar">    
