--- a/paginas/combos.html
+++ b/paginas/combos.html
@@ -11,7 +11,9 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="../css/estilos.css" rel="stylesheet">
     <link rel="shortcut icon" href="../imagenes/pelicula (1).png" type="image/x-icon">
-    <title>CineMatrix</title>
+    <title>Combos</title>
+    <meta name="description" content="Disfruta todos los combos y promos que tenemos para ofrecerte.">
+    <meta name="keywords" content="peliculas, cartelera, cine, entretenimiento, proyeccion, audiovisual, combos, pochoclos, nachos.">
 </head>
 
 <body>
@@ -131,7 +133,7 @@
         </div>
 
         <div class="bloque-combos">
-            <p class="bloque__combos">COMBOS</p>
+            <h1 class="bloque__combos">COMBOS</h1>
         </div>
         
         <!--COMBOS-->
