--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -10,7 +10,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link href="../css/estilos.css" rel="stylesheet">
     <link rel="shortcut icon" href="../imagenes/pelicula (1).png" type="image/x-icon">
-    <title>CineMatrix</title>
+    <title>Contacto</title>
+    <meta name="description" content="Contactate a traves de nuestro formulario para sacarte tus dudas y/o sugerencias.">
+    <meta name="keywords" content="peliculas, cartelera, cine, entretenimiento, proyeccion, audiovisual, actores, actrices, directores, contacto.">
 </head>
 
 <body>
@@ -130,7 +132,7 @@
         </div>
 
         <div class="bloque-contacto">
-            <p class="bloque__contacto">CONTACTO</p>
+            <h1 class="bloque__contacto">CONTACTO</h1>
         </div>
 
         <!--NAVEGACION CONSULTAS-->
