--- a/paginas/horarios.html
+++ b/paginas/horarios.html
@@ -11,7 +11,9 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="../css/estilos.css" rel="stylesheet">
     <link rel="shortcut icon" href="../imagenes/pelicula (1).png" type="image/x-icon">
-    <title>CineMatrix</title>
+    <title>Horarios</title>
+    <meta name="description" content="Conoce todos los dias y horarios que ofrecemos.">
+    <meta name="keywords" content="peliculas, cartelera, cine, entretenimiento, proyeccion, audiovisual, actores, actrices, directores, horarios.">
 </head>
 
 <body>
@@ -131,8 +133,8 @@
     </div>
 
 
-      <div class="bloque">
-        <p class="bloque__horarios">Horarios</p>
+      <div class="bloque-horarios">
+        <h1 class="bloque__horarios">Horarios</h1>
       </div>
 
       <!--HORARIOS-->
