--- a/paginas/proximos-estrenos.html
+++ b/paginas/proximos-estrenos.html
@@ -11,7 +11,9 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="../css/estilos.css" rel="stylesheet">
     <link rel="shortcut icon" href="../imagenes/pelicula (1).png" type="image/x-icon">
-    <title>CineMatrix</title>
+    <meta name="description" content="No te pierdas los proximos estrenos de peliculas que estan por llegar.">
+    <meta name="keywords" content="peliculas, cartelera, cine, entretenimiento, proyeccion, audiovisual, actores, actrices, directores, estrenos">
+    <title>Proximos estrenos</title>
 </head>
 <body>
     <header>
@@ -130,8 +132,8 @@
         </div>
         
 
-        <div class="cartelera">
-            <p class="bloque__proximos-estrenos">PROXIMOS ESTRENOS</p>
+        <div class="bloque-proximos-estrenos">
+            <h1 class="bloque__proximos-estrenos">PROXIMOS ESTRENOS</h1>
         </div>
 
 
@@ -161,7 +163,7 @@
             </div>
 
             <div class="sinopsis">   
-                <p><span class="titulo__pelicula">EL JOVEN MANOS DE TIJERAS</span></p>
+                <h2><span class="titulo__pelicula">EL JOVEN MANOS DE TIJERAS</span></h2>
                 <p>Estupenda fábula con mucho de cuento de hadas sobre un ser (Johnny Depp) creado por un viejo inventor que muere antes de cambiarle las tijeras por manos humanas. El joven es "adoptado" por una vendedora de Avon (Dianne Wiest), quien lo lleva a vivir a un típico suburbio americano.</p>
                 <input class="boton" type="submit" value="Comprar">    
             </div>
@@ -195,7 +197,7 @@
             </div>
 
             <div class="sinopsis">   
-                <p><span class="titulo__pelicula">LA BELLA Y LA BESTIA</span></p>
+                <h2><span class="titulo__pelicula">LA BELLA Y LA BESTIA</span></h2>
                 <p>Bella intercambia su libertad por la de su padre y queda atrapada en un castillo encantado, habitado por una Bestia que en realidad es un príncipe maldito. Bella descubre la bondad y nobleza en el interior de la Bestia. Juntos, superan desafíos y aprenden a valorar la belleza interior, demostrando que el amor puede transformar incluso a las criaturas más extrañas.
                 </p>
                 <input class="boton" type="submit" value="Comprar">    
@@ -230,7 +232,7 @@
                 </ul>
             </div>
             <div class="sinopsis">   
-                <p><span class="titulo__pelicula">FOREST GUMP</span></p>
+                <h2><span class="titulo__pelicula">FOREST GUMP</span></h2>
                 <p>Sentado en un banco en Savannah, Georgia, Forrest Gump espera al autobús. Mientras éste tarda en llegar, el joven cuenta su vida a las personas que se sientan a esperar con él. Aunque sufre un pequeño retraso mental, esto no le impide hacer cosas maravillosas. Sin entender del todo lo que sucede a su alrededor, Forrest toma partido en los eventos más importantes de la historia de los Estados Unidos.</p>
                 <input class="boton" type="submit" value="Comprar">    
             </div>
@@ -261,7 +263,7 @@
                 </ul>
             </div>
             <div class="sinopsis">   
-                <p><span class="titulo__pelicula">EL REY LEON</span></p>
+                <h2><span class="titulo__pelicula">EL REY LEON</span></h2>
                 <p>Tras la muerte de su padre, Simba deberá enfrentarse a su tío para recuperar el trono de Rey de la Selva. Timón y Pumba le acompañarán en su misión.</p>
                 <input class="boton" type="submit" value="Comprar">    
             </div>
@@ -294,7 +296,7 @@
                 </ul>
             </div>
             <div class="sinopsis">   
-                <p><span class="titulo__pelicula">ANTES DE AMANECER</span></p>
+                <h2><span class="titulo__pelicula">ANTES DE AMANECER</span></h2>
                 <p>Un joven periodista norteamericano, que acaba de romper con su novia, y una estudiante francesa se conocen casualmente en el tren Budapest-París. Entablan conversación y deciden recorrer Viena juntos durante una noche que cambiará sus vidas.</p>
                 <input class="boton" type="submit" value="Comprar">    
             </div>
@@ -327,7 +329,7 @@
                 </ul>
             </div>
             <div class="sinopsis">   
-                <p><span class="titulo__pelicula">NI IDEA</span></p>
+                <h2><span class="titulo__pelicula">NI IDEA</span></h2>
                 <p>Cher y Dionne son dos de las chicas más populares de un instituto de Beverly Hills. Su máxima preocupación es llevar la ropa más atractiva y ser tan populares como sea posible. Pero a pesar de su apariencia, Cher tiene un gran corazón.</p>
                 <input class="boton" type="submit" value="Comprar">    
             </div>
@@ -360,7 +362,7 @@
                 </ul>
             </div>
             <div class="sinopsis">   
-                <p><span class="titulo__pelicula">SCREAM</span></p>
+                <h2><span class="titulo__pelicula">SCREAM</span></h2>
                 <p>Un asesino en serie, con máscara y disfraz negro, siembra el pánico entre los adolescentes de un pueblo californiano. Paralelamente, la joven Sidney Prescott atraviesa un mal momento: se cumple un año desde que murió su madre.
                 </p>
                 <input class="boton" type="submit" value="Comprar">    
@@ -394,7 +396,7 @@
                 </ul>
             </div>
             <div class="sinopsis">   
-                <p><span class="titulo__pelicula">EL SHOW DE TRUMAN</span></p>
+                <h2><span class="titulo__pelicula">EL SHOW DE TRUMAN</span></h2>
                 <p>Truman Burbank es la estrella de un programa de televisión pero él no lo sabe. Desde que nació, su vida es televisada y emitida para todo el mundo.
                 </p>
                 <input class="boton" type="submit" value="Comprar">    
@@ -428,7 +430,7 @@
                 </ul>
             </div>
             <div class="sinopsis">   
-                <p><span class="titulo__pelicula">SEXTO SENTIDO</span></p>
+                <h2><span class="titulo__pelicula">SEXTO SENTIDO</span></h2>
                 <p>Malcolm Crowe es un psicólogo infantil que vive obsesionado por el recuerdo de un joven al que fue incapaz de ayudar. Cuando conoce a Cole, un aterrorizado y confuso niño de ocho años, ve que se le presenta la oportunidad de redimirse haciendo todo lo posible para ayudarlo. Sin embargo, el doctor no está preparado para descubrir la terrible verdad sobre el chico: recibe visitas de espíritus atormentados que lo asustan.
                 </p>
                 <input class="boton" type="submit" value="Comprar">    
