--- a/paginas/precios.html
+++ b/paginas/precios.html
@@ -10,7 +10,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link href="../css/estilos.css" rel="stylesheet">
     <link rel="shortcut icon" href="../imagenes/pelicula (1).png" type="image/x-icon">
-    <title>CineMatrix</title>
+    <meta name="description" content="Enterate de los super precios que ofrecemos.">
+    <meta name="keywords" content="peliculas, cartelera, cine, entretenimiento, proyeccion, audiovisual, actores, actrices, directores, precios.">
+    <title>Precios</title>
 </head>
 
 <body>
@@ -129,8 +131,8 @@
             </button>
         </div>
 
-            <div class="precios">
-                <p class="bloque__precios">PRECIOS</p>
+            <div class="bloque-precios">
+                <h1 class="bloque__precios">PRECIOS</h1>
             </div>
 
             <!--PRECIOS-->
