--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="./css/estilos.css" rel="stylesheet">
     <link rel="shortcut icon" href="imagenes/pelicula (1).png" type="image/x-icon">
     <title>CineMatrix</title>
-    <meta name="description" content="Cinematrix te espera para que puedas ver todo lo nueva en peliculas a traves de nuestra cartelera.">
+    <meta name="description" content="Cinematrix te espera para que puedas ver todo lo nuevo en peliculas a traves de nuestra fabulosa cartelera.">
     <meta name="keywords" content="peliculas, cartelera, cine, entretenimiento, proyeccion, audiovisual, actores, actrices, directores">
 </head>
 <body>
