--- a/paginas/combos.html
+++ b/paginas/combos.html
@@ -12,7 +12,7 @@
     <link href="../css/estilos.css" rel="stylesheet">
     <link rel="shortcut icon" href="../imagenes/pelicula (1).png" type="image/x-icon">
     <title>Combos</title>
-    <meta name="description" content="Disfruta todos los combos y promos que tenemos para ofrecerte.">
+    <meta name="description" content="Disfruta todas las promos de nuestros combos que tenemos para ofrecerte mientras ves tu pelicula favorita.">
     <meta name="keywords" content="peliculas, cartelera, cine, entretenimiento, proyeccion, audiovisual, combos, pochoclos, nachos.">
 </head>
 
