--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -11,7 +11,7 @@
     <link href="../css/estilos.css" rel="stylesheet">
     <link rel="shortcut icon" href="../imagenes/pelicula (1).png" type="image/x-icon">
     <title>Contacto</title>
-    <meta name="description" content="Contactate a traves de nuestro formulario para sacarte tus dudas y/o sugerencias.">
+    <meta name="description" content="Contactate a traves de nuestro formulario para sacar tus dudas y/o sugerencias.">
     <meta name="keywords" content="peliculas, cartelera, cine, entretenimiento, proyeccion, audiovisual, actores, actrices, directores, contacto.">
 </head>
 
