--- a/paginas/horarios.html
+++ b/paginas/horarios.html
@@ -12,7 +12,7 @@
     <link href="../css/estilos.css" rel="stylesheet">
     <link rel="shortcut icon" href="../imagenes/pelicula (1).png" type="image/x-icon">
     <title>Horarios</title>
-    <meta name="description" content="Conoce todos los dias y horarios que ofrecemos.">
+    <meta name="description" content="Conoce todos los dias y horarios que ofrecemos para que puedas visitarnos.">
     <meta name="keywords" content="peliculas, cartelera, cine, entretenimiento, proyeccion, audiovisual, actores, actrices, directores, horarios.">
 </head>
 
